To prevent the text content from overflowing

--- a/styles.css
+++ b/styles.css
@@ -13,4 +13,6 @@ html{
     clip-path: inset(50%);
     width: 1px;
     height: 1px;
+    overflow: hidden;
+    white-space: nowrap;
   }
